# preprocessing

./: .gitignore  README.md
ros2_ars540_msgs/: package.xml
ros2_ars540_msgs/msg/: DetectionSegment.msg  DetectionSegmentArray.msg
src/: input.py  output.py  preprocess.py  reader.py
src/msgs/ros2_ars540_msgs/: CMakeLists.txt
src/msgs/ros2_ars540_msgs/msg/: RadarHeader.msg  SensorStatus.msg
src/msgs/uva_iac_msgs/: CMakeLists.txt  package.xml
src/msgs/uva_iac_msgs/msg/: BatchDetection.msg  BatchTrack.msg  BatchTrackPrediction.msg  BoundingBoxCav.msg  BoundingBoxCavArray.msg  CandidateTrajectories.msg  ControllerState.msg  GraphPose.msg  GraphTrajectory.msg  MixnetInput.msg  MpcAccSolution.msg  Performance.msg  Polynomial.msg  SearchMetrics.msg  StateTransition.msg  Track.msg  TrackPrediction.msg  TrajectoryIndices.msg
src/msgs/uva_iac_msgs/srv/: ResetBoundaryDetector.srv
util/: plot_bb.py  plot_samples.py
